# rust_bot

irc_bot/: Cargo.toml
irc_bot/src/: command_handler.rs  connection.rs  credentials.rs  main.rs  message_handler.rs  simple_message.rs
irc_bot/src/bot/: command_handler.rs  connection.rs  credentials.rs  message_handler.rs  mod.rs  simple_message.rs
irc_bot/src/bot/commands/: help_command.rs  mod.rs  user_command.rs
irc_bot/src/config/: mod.rs
irc_bot/src/llm_client/: mod.rs
irc_bot/src/osu_api/: credentials.rs  mod.rs
irc_bot/src/osu_api/api_structures/: auth_request.rs  auth_response.rs  mod.rs  osu_user.rs  user_request.rs  user_response.rs
irc_bot/src/osu_api/osu_api_requests/: auth.rs  get_user.rs  get_user_data.rs  mod.rs
irc_bot/src/osu_api/osu_api_structures/: auth_request.rs
irc_bot/src/osu_api_client/: mod.rs
irc_bot/src/osu_api_client/osu_api_requests/: auth.rs  get_user.rs  mod.rs
irc_bot/src/osu_bot/: mod.rs
irc_bot/src/osu_bot/commands/: help_command.rs  mod.rs  user_command.rs
irc_bot/src/osu_bot/functions/: command_handler.rs  listen.rs  mod.rs
irc_bot/src/osu_irc_client/: mod.rs
